--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>br.com.alura</groupId>
     <artifactId>ecommerce</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +20,13 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>service-email</module>
+        <module>service-log</module>
+        <module>service-order</module>
+        <module>commons-kafka</module>
+        <module>service-fraude</module>
+    </modules>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
@@ -42,8 +50,5 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-
-
-
     </dependencies>
 </project>
